language/move-lang/tests/move_check/expansion/standalone_mname_with_type_args.exp
error: 

   ┌── tests/move_check/expansion/standalone_mname_with_type_args.move:3:27 ───
   │
 3 │         let _ = 0 + M<u64>;
   │                           ^ Unexpected token: ';'
   ·
 3 │         let _ = 0 + M<u64>;
   │                           - Expected: '{', '('
   │

